# backend/openapi/schema.yaml
@@ -169,9 +169,6 @@ components:
         logo:
           description: Logo file identifier.
           type: string
-        recording:
-          description: Recording file identifier.
-          type: string
         rtmp_server:
           description: Specific RTMP server to use for live streams.
           type: string
@@ -194,9 +191,6 @@ components:
       properties:
         logo:
           description: Logo file identifier.
-          type: string
-        recording:
-          description: Recording file identifier.
           type: string
         rtmp_server:
           description: Specific RTMP server to use for live streams.
@@ -228,9 +222,6 @@ components:
         logo:
           description: Logo file identifier.
           type: string
-        recording:
-          description: Recording file identifier.
-          type: string
         rtmp_server:
           description: Specific RTMP server to use for live streams.
           type: string
@@ -249,6 +240,9 @@ components:
           type: boolean
         vj:
           description: Present if the visuals for a DJ are done by a VJ.
+          type: string
+        recording:
+          description: Recording file identifier for pre-recorded DJs.
           type: string
     UpdateLineupDJ:
       type: object
